Introspect recipe