@@ -1,16 +1,26 @@
 package openrewrite;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 public class ToBeUpdated {
 
-    public static void main(String[] args) throws MalformedURLException {
+    public static void main(String[] args) throws Exception {
 
         // This code has to be updated by the URLConstructorToURICreate recipe
-        URL url1 = new URL("http://www.google.com") ;
-        URL url2 = new URL("http://www.google.com") ;
-        URL url3 = new URL("http://www.google.com") ;
+        URL url = new URL("http://www.google.com");
+        URI uri = new URI("http://www.google.com");
 
+        ToBeUpdated me = new ToBeUpdated();
+        me.getResume();
+    }
+
+    private void getResume() {
+        Thread someThread = new Thread(() -> {
+            // Thread logic here
+        });
+        someThread.start();
+        // This code has to be updated by the ThreadStopUnsupported recipe
+        someThread.resume();
     }
 }
